--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -1,8 +1,19 @@
 extent.reporter.spark.start=true
-extent.reporter.spark.out=test-output/SparkReport/Spark.html
+extent.reporter.spark.out=reports/SparkReport/Spark.html
 extent.reporter.spark.config=src/test/resources/extent-config.xml
 extent.reporter.spark.vieworder=dashboard,test,category,exception,author,device,log
+
+basefolder.name=reports
+basefolder.datetimepattern=d-MMM-YY HH-mm-ss
+
+screenshot.dir=reports/
+screenshot.rel.path=../
+
+extent.reporter.pdf.start=true
+extent.reporter.pdf.out=target/PDFReport/ExtentPDF.pdf
+
 systeminfo.os=Linux
 systeminfo.user=Marin VT QA LEAD
 systeminfo.build=1.1
 systeminfo.AppName=Woman Automation Project
+
