--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -3,7 +3,7 @@ extent.reporter.spark.out=reports/SparkReport/Spark.html
 extent.reporter.spark.config=src/test/resources/extent-config.xml
 extent.reporter.spark.vieworder=dashboard,test,category,exception,author,device,log
 
-basefolder.name=reports
+basefolder.name=spark_reports
 basefolder.datetimepattern=d-MMM-YY HH-mm-ss
 
 screenshot.dir=reports/
@@ -12,6 +12,7 @@ screenshot.rel.path=../
 extent.reporter.pdf.start=true
 extent.reporter.pdf.out=target/PDFReport/ExtentPDF.pdf
 
+# OS properties
 systeminfo.os=Linux
 systeminfo.user=Marin VT QA LEAD
 systeminfo.build=1.1
