--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -1,12 +1,12 @@
 extent.reporter.spark.start=true
-extent.reporter.spark.out=reports/SparkReport/Spark.html
+extent.reporter.spark.out=sparkReports/SparkReport/Spark.html
 extent.reporter.spark.config=src/test/resources/extent-config.xml
 extent.reporter.spark.vieworder=dashboard,test,category,exception,author,device,log
 
 basefolder.name=spark_reports
 basefolder.datetimepattern=d-MMM-YY HH-mm-ss
 
-screenshot.dir=reports/
+screenshot.dir=spark_reportsScreenshot/
 screenshot.rel.path=../
 
 extent.reporter.pdf.start=true
