--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -6,7 +6,7 @@ extent.reporter.spark.vieworder=dashboard,test,category,exception,author,device,
 basefolder.name=spark_reports
 basefolder.datetimepattern=d-MMM-YY HH-mm-ss
 
-screenshot.dir=spark_reportsScreenshot/
+screenshot.dir=sparkReports/
 screenshot.rel.path=../
 
 extent.reporter.pdf.start=true
