New changes: New test scripts for hotnews: 1. New Test cases for Category Top Stories

--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -16,5 +16,5 @@ extent.reporter.pdf.out=reportsPDF/PDFReport/ExtentPDF.pdf
 systeminfo.os=Linux
 systeminfo.user=Marin VT QA LEAD
 systeminfo.build=1.1
-systeminfo.AppName=Woman Automation Project
+systeminfo.AppName= hotNews Automation Project
 
