1. Spark report improved with new folder witn screenshots

--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -1,18 +1,26 @@
+#HTML Report
 extent.reporter.spark.start=true
-extent.reporter.spark.out=sparkReports/SparkReport/Spark.html
+extent.reporter.spark.out=SparkReport/Spark.html
 extent.reporter.spark.config=src/test/resources/extent-config.xml
 extent.reporter.spark.vieworder=dashboard,test,category,exception,author,device,log
 
-basefolder.name=spark_reports
+#FolderName
+basefolder.name=spark_report
 basefolder.datetimepattern=d-MMM-YY HH-mm-ss
 
-screenshot.dir=sparkReports/
-screenshot.rel.path=../
+#Screenshot
+screenshot.dir=/Screenshots/
+screenshot.rel.path=../Screenshots/
 
+
+#Base64
+extent.reporter.spark.base64imagesrc=false
+
+#PDF Report
 extent.reporter.pdf.start=true
-extent.reporter.pdf.out=reportsPDF/PDFReport/ExtentPDF.pdf
+extent.reporter.pdf.out=PDFReport/ExtentPDF.pdf
 
-# OS properties
+# OS properties and System Info
 systeminfo.os=Linux
 systeminfo.user=Marin VT QA LEAD
 systeminfo.build=1.1
