1. New scroll down method using fromViewport(10, 10) in Base class 2. New Pages

--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -1,5 +1,11 @@
 #HTML Report
 extent.reporter.spark.start=true
+
+extent.reporter.spark.enable.device=true
+extent.reporter.spark.enable.author=true
+extent.reporter.spark.prefix.device=@device_
+extent.reporter.spark.prefix.author=@author_
+
 extent.reporter.spark.out=SparkReport/Spark.html
 extent.reporter.spark.config=src/test/resources/extent-config.xml
 extent.reporter.spark.vieworder=dashboard,test,category,exception,author,device,log
@@ -11,7 +17,6 @@ basefolder.datetimepattern=d-MMM-YY HH-mm-ss
 #Screenshot
 screenshot.dir=/Screenshots/
 screenshot.rel.path=../Screenshots/
-
 
 #Base64
 extent.reporter.spark.base64imagesrc=false
