--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -1,20 +1,20 @@
 extent.reporter.spark.start=true
-extent.reporter.spark.out=sparkReports/SparkReport/Spark.html
+extent.reporter.spark.out=SparkReport/Spark.html
 extent.reporter.spark.config=src/test/resources/extent-config.xml
 extent.reporter.spark.vieworder=dashboard,test,category,exception,author,device,log
 
 basefolder.name=spark_reports
 basefolder.datetimepattern=d-MMM-YY HH-mm-ss
 
-screenshot.dir=spark_reportsScreenshot/
-screenshot.rel.path=../
+screenshot.dir=/spark_reportsScreenshot/
+screenshot.rel.path=../spark_reportsScreenshot/
 
 extent.reporter.pdf.start=true
-extent.reporter.pdf.out=reportsPDF/PDFReport/ExtentPDF.pdf
+extent.reporter.pdf.out=PDFReport/ExtentPDF.pdf
 
 # OS properties
 systeminfo.os=Linux
 systeminfo.user=Marin VT QA LEAD
 systeminfo.build=1.1
-systeminfo.AppName=Woman Automation Project
+systeminfo.AppName=JQA Academy Project
 
